# vkguide

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  camera.h  main.cpp  vk_engine.cpp  vk_engine.h  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_types.h
